# ResistorCodeReader

./: CMakeLists.txt  Dockerfile  Dockerfile2  README.md  container_init.bash
app/: CMakeLists.txt
app/src/: main.cpp
